fixing z-index

--- a/Day_058_Bootstrap/css/styles.css
+++ b/Day_058_Bootstrap/css/styles.css
@@ -5,6 +5,8 @@ body {
 #title {
     background-color: #ff4c68;
     color: #fff;
+    position: relative;
+    z-index: 0;
 }
 
 h1 {  
@@ -63,12 +65,18 @@ h3 {
 .title-image {
     width: 60%;
     transform: rotate(25deg);
+    position: absolute;
+    z-index: -1;
+    margin-top: 50px;
 }
 
 /* Features */
 
 #features {
     padding: 7% 15%;
+    background-color: white;
+    position: absolute;
+    z-index: 1;
 }
 
 .feature-name {
